--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,18 +16,30 @@ jobs:
         uses: actions/checkout@v2
       - name: Test
         run: go test ./...
-  deploy:
-    name: Deploy
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Compile app.yaml
-        run: cat app.template.yaml | envsubst > app.yaml
-        env:
-          DSN: ${{ secrets.gcp_sql_dsn }}
-      - name: Deploy
-        uses: google-github-actions/deploy-appengine@main
-        with:
-          credentials: ${{ secrets.gcp_credentials }}
+  # deploy:
+  #   name: Deploy
+  #   needs: test
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     - name: Setup gcloud
+  #       uses: google-github-actions/setup-gcloud@v0.2.1
+  #       with:
+  #         project_id: ${{ secrets.gcp_project_id }}
+  #         service_account_key: ${{ secrets.gcp_credentials }}
+  #         export_default_credentials: true
+  #     - name: Authorize docker
+  #       run: gcloud auth configure-docker
+  #     - name: Build & push
+  #       run: |
+  #         docker build -t gcr.io/${{ secrets.gcp_project_id }}/contacts-api:${{ github.sha }} .
+  #         docker push gcr.io/${{ secrets.gcp_project_id }}/contacts-api:${{ github.sha }}
+  #     - name: Deploy
+  #       uses: google-github-actions/deploy-cloudrun@v0.6.0
+  #       with:
+  #         service: contacts-api
+  #         image: gcr.io/${{ secrets.gcp_project_id }}/contacts-api:${{ github.sha }}
+  #         region: europe-central2
+  #         flags: --add-cloudsql-instances=${{ secrets.gcp_sql_connection_name }}
+  #         env_vars: DSN=${{ secrets.gcp_sql_dsn }}
